Fix toolbar z-index

--- a/src/app/page-header/page-header.component.scss
+++ b/src/app/page-header/page-header.component.scss
@@ -51,7 +51,7 @@ mat-sidenav-content {
 mat-toolbar {
     position: fixed;
     top: 0;
-    z-index: 1;
+    z-index: 2;
 }
 
 @media(min-width: $s-medium) {
